--- a/src/pages/mailing.astro
+++ b/src/pages/mailing.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/fullscreen.astro'
 ---
 
-<Layout title="AInk News – Mailing List" showLogo>
+<Layout title="AInk News – Mailing List" description="Sign up sheet for the AInk Newsletter" showLogo>
     <form method="post" action="https://listmonk.aink.news/subscription/form" class="bg-white dark:bg-slate-700 shadow-md rounded px-8 pt-6 pb-8 mb-4 form-width">
         <div class="mb-4">
             <h2 class="text-3xl">Mailing List</h2>
