--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -5,15 +5,16 @@ import '../styles/default.scss'
 
 interface ComponentProps {
     title: string
+    description: string
 }
 
 type Props = {
     frontmatter: ComponentProps
 } | ComponentProps
 
-const { title } = "frontmatter" in Astro.props ? Astro.props.frontmatter : Astro.props
+const { title, description } = "frontmatter" in Astro.props ? Astro.props.frontmatter : Astro.props
 ---
-<Base title={title}>
+<Base title={title} description={description}>
     <nav class="dynamic-bg flex justify-between items-center w-screen h-20 p-3">
         <Nav showLogo />
     </nav>
